--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "16.13.1",
     "react-select": "^5.3.2",
+    "recharts": "^2.4.1",
     "sharp": "^0.30.7",
     "sweetalert2": "^10.12.5",
     "webpack": "^4.44.2",
